src/scss/components/paragraphs/_liftup-with-image.scss
/* ... */
// Designs with image on the left or right.
.liftup-with-image--design-image-on-right,
.liftup-with-image--design-image-on-left,
.liftup-with-image--design-image-on-right-secondary,
.liftup-with-image--design-image-on-left-secondary {
  max-width: $container-width-xl;

  .liftup-with-image__image,
  .liftup-with-image__container {
    display: flex;
    padding: 0;
  }

  .liftup-with-image__image {
    margin: 0 auto;
    max-width: $content-area-wrapper-width-max;
    padding: 0 $spacing-and-half;
  }

  .liftup-with-image__container {
    @include breakpoint($breakpoint-design-image-on-left-right) {
      bottom: 0;
      left: 0;
      position: absolute;
      right: 0;
      top: 0;
    }
  }

  .liftup-with-image__content {
    @include breakpoint($breakpoint-design-image-on-left-right) {
      display: flex;
      flex-direction: column;
      justify-content: center;
      min-height: 350px; // According to layouts
      position: absolute;
      top: 50%;
      transform: translateY(-50%);
      width: 460px; // According to layouts
    }

    @include breakpoint($breakpoint-xl) {
      min-height: 435px; // According to layouts
    }
  }
}

.liftup-with-image--design-image-on-right,
.liftup-with-image--design-image-on-right-secondary {
  .liftup-with-image__image {
    justify-content: flex-end;
    padding-left: 10%;
    position: relative;
    z-index: 0;

    @include breakpoint($breakpoint-s) {
      padding-left: 20%;
    }

    @include breakpoint($breakpoint-design-image-on-left-right) {
      padding-left: 30%;
    }

    @include breakpoint($breakpoint-xl) {
      padding-left: 20%;
    }
  }

  .liftup-with-image__container {
    justify-content: flex-start;
    margin-right: 10%;
    margin-top: -#{$spacing-double};
    position: relative;
    z-index: 1;

    @include breakpoint($breakpoint-s) {
      margin-right: 20%;
    }

    @include breakpoint($breakpoint-design-image-on-left-right) {
      margin-right: auto;
      margin-top: 0;
      position: absolute;
    }
  }

  .liftup-with-image__content {
    @include breakpoint($breakpoint-design-image-on-left-right) {
      left: 0;
      right: auto;
    }
  }
}

.liftup-with-image--design-image-on-left,
.liftup-with-image--design-image-on-left-secondary {
  .liftup-with-image__image {
    justify-content: flex-start;
    padding-right: 10%;
    position: relative;
    z-index: 0;

    @include breakpoint($breakpoint-s) {
      padding-right: 20%;
    }

    @include breakpoint($breakpoint-design-image-on-left-right) {
      padding-right: 30%;
    }

    @include breakpoint($breakpoint-xl) {
      padding-right: 20%;
    }
  }

  .liftup-with-image__container {
    justify-content: flex-end;
    margin-left: 10%;
    margin-top: -#{$spacing-double};
    position: relative;
    z-index: 1;

    @include breakpoint($breakpoint-s) {
      margin-left: 20%;
    }

    @include breakpoint($breakpoint-design-image-on-left-right) {
      margin-left: auto;
      margin-top: 0;
      position: absolute;
    }
  }

  .liftup-with-image__content {
    @include breakpoint($breakpoint-design-image-on-left-right) {
      left: auto;
      right: 0;
    }
  }
}
/* ... */

